Closed Bug 561640 Opened 14 years ago Closed 14 years ago

<input> and <textarea> should not suffer from being too long if dirty value flag is true

Categories

(Core :: DOM: Core & HTML, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla2.0b5

People

(Reporter: mounir, Assigned: mounir)

References

()

Details

(Keywords: dev-doc-complete, html5)

Attachments

(1 file)

"If an element has a maximum allowed value length, and its dirty value flag is true, and the code-point length of the element's value is greater than the element's maximum allowed value length, then the element is suffering from being too long."

Patch in bug 345624 doesn't check the dirty value flag because it should come with the value sanitizing algorithm (bug 549475) which is not fixed at the moment.
Keywords: dev-doc-needed
Summary: Input elements should not suffer from being too long if dirty value flag is true → <input> and <textarea> should not suffer from being too long if dirty value flag is true
The initial comment had a mistake: this patch doesn't need bug 549475.
No longer depends on: 549475
Attached patch Patch v1Splinter Review
Attachment #460841 - Flags: review?(Olli.Pettay)
Blocks: 558788
Attachment #460841 - Flags: review?(Olli.Pettay) → review+
This is now in the tree.
rev: http://hg.mozilla.org/mozilla-central/rev/3a7630d8f175
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Flags: in-testsuite+
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b5
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: