Bug 561640 - <input> and <textarea> should not suffer from being too long if dirty value flag is true. r=smaug a2.0=blocking